--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Chilanka&family=Tagesschrift&display=swap" rel="stylesheet">
@@ -76,7 +78,7 @@
       <div class="col-md-6 text-md-start">
         <h1 class="display-5 mb-0">Hi, I'm </h1>
         <h1 class="display-2 mb-2" style="font-family: Winky Rough;">Vignesh Vijayan</h1>
-        <p class="lead mb-0 text-center">Aspiring Software Developer</p>
+        <p class="lead mb-0 text-center"> Software Developer</p>
         <br>
         <div class="text-center">
         <a href="#contact" class="btn btn-dark btn-sm rounded-pill ">
@@ -122,18 +124,17 @@
   
       <div class="col-md-8 offset-md-2 text-center">
         <p class="lead">
-          I'm Vignesh Vijayan, an aspiring software developer with a strong interest in building efficient and scalable web applications. I enjoy learning new technologies and solving real-world problems through code.
+      I'm Vignesh Vijayan, a backend developer with a strong interest in building efficient, secure, and scalable web applications. I specialize in server-side development, working with databases, APIs, and system architecture to solve real-world problems through clean and maintainable code
         </p>
         <p>
-          My goal is to continually grow as a developer and contribute to projects that make a meaningful impact. I have experience with front-end technologies like HTML, CSS, JavaScript, and frameworks like Bootstrap.
-        </p>
+I’m driven by a commitment to continuous growth and delivering real-world impact through technology. While my strength lies in backend development, I bring valuable front-end experience with HTML, CSS, JavaScript, and Bootstrap—allowing me to bridge the gap between user experience and powerful server-side logic.        </p>
       </div>
     </div>
   </section>
 
   <!-- skills -->
 
-  <section id="skills" class="container py-5 text-white"   >
+  <!-- <section id="skills" class="container py-5 text-white"   >
     <div class="row">
       <div class="col-12 text-center mb-4">
         <h2 class="display-5 text-color" style="font-family: Tagesschrift;" >Skills</h2>
@@ -158,7 +159,173 @@
         <h5>Bootstrap</h5>
       </div>
     </div>
-  </section>
+  </section> -->
+
+
+<section id="skills" class="container py-5 text-white">
+  <div class="row">
+    <div class="col-12 text-center mb-4">
+      <h2 class="display-5 text-color" style="font-family: Tagesschrift;">Skills</h2>
+      <hr class="w-25 mx-auto">
+    </div>
+
+    <!-- Backend Skills -->
+    <div class="col-md-3 col-6 text-center mb-4">
+      <i class="fas fa-code fa-3x text-info mb-2"></i>
+      <h5>C#</h5>
+    </div>
+    <div class="col-md-3 col-6 text-center mb-4">
+      <i class="fas fa-laptop-code fa-3x text-info mb-2"></i>
+      <h5>.NET Core</h5>
+    </div>
+    <div class="col-md-3 col-6 text-center mb-4">
+      <i class="fas fa-database fa-3x text-success mb-2"></i>
+      <h5>Entity Framework Core</h5>
+    </div>
+    <div class="col-md-3 col-6 text-center mb-4">
+      <i class="fas fa-plug fa-3x text-secondary mb-2"></i>
+      <h5>Dapper</h5>
+    </div>
+    <div class="col-md-3 col-6 text-center mb-4">
+      <i class="fas fa-server fa-3x text-warning mb-2"></i>
+      <h5>REST APIs</h5>
+    </div>
+    <div class="col-md-3 col-6 text-center mb-4">
+      <i class="fas fa-key fa-3x text-danger mb-2"></i>
+      <h5>JWT Authentication</h5>
+    </div>
+    <div class="col-md-3 col-6 text-center mb-4">
+      <i class="fas fa-stream fa-3x text-info mb-2"></i>
+      <h5>LINQ</h5>
+    </div>
+    <div class="col-md-3 col-6 text-center mb-4">
+      <i class="fas fa-database fa-3x text-primary mb-2"></i>
+      <h5>SQL Server</h5>
+    </div>
+
+    <!-- Frontend Skills -->
+    <div class="col-md-3 col-6 text-center mb-4">
+      <i class="fab fa-html5 fa-3x text-danger mb-2"></i>
+      <h5>HTML5</h5>
+    </div>
+    <div class="col-md-3 col-6 text-center mb-4">
+      <i class="fab fa-css3-alt fa-3x text-primary mb-2"></i>
+      <h5>CSS3</h5>
+    </div>
+    <div class="col-md-3 col-6 text-center mb-4">
+      <i class="fab fa-js-square fa-3x text-warning mb-2"></i>
+      <h5>JavaScript</h5>
+    </div>
+    <div class="col-md-3 col-6 text-center mb-4">
+      <i class="fab fa-bootstrap fa-3x text-purple mb-2"></i>
+      <h5>Bootstrap</h5>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+<!-- project section -->
+
+
+<section id="projects" class="container py-5 text-white">
+  <div class="text-center mb-5">
+    <h2 class="display-5 text-color" style="font-family: Tagesschrift;">Featured Projects</h2>
+    <hr class="w-25 mx-auto">
+  </div>
+
+  <div class="row g-4">
+    <!-- NestLeaf Card -->
+    <div class="col-md-6">
+      <div class="bg-dark rounded-4 shadow-lg p-4 h-100">
+        <div class="text-center mb-3">
+   <img src="/images/nestleaf1.png" 
+     alt="NestLeaf Project" 
+     class="img-fluid rounded-3" 
+     style="width: 100%; height: 200px; object-fit: cover; object-position: center 30%;" />
+
+
+
+        </div>
+        <h3 class="mb-3">NestLeaf</h3>
+        <p>
+          A full-featured indoor plant e-commerce backend built with ASP.NET Core, EF Core, Dapper, and Razorpay integration.
+        </p>
+        <div class="mb-3">
+          <span class="badge bg-primary me-2">.NET</span>
+          <span class="badge bg-dark me-2">EF Core</span>
+          <span class="badge bg-secondary me-2">Dapper</span>
+          <span class="badge bg-warning text-dark">Razorpay</span>
+        </div>
+        <div class="mt-3">
+          <a href="https://github.com/vigneshvijayan103/NestLeaf.git" target="_blank" class="text-white fs-4 me-3">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://nestleaf.live" target="_blank" class="text-white fs-4">
+            <i class="fas fa-external-link-alt"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Portfolio Card -->
+    <div class="col-md-6">
+      <div class="bg-dark rounded-4 shadow-lg p-4 h-100">
+        <div class="text-center mb-3">
+          <img src="/images/profile.png" alt="Portfolio Project" class="img-fluid" style="max-height: 200px;">
+        </div>
+        <h3 class="mb-3">Personal Portfolio</h3>
+        <p>
+          A responsive personal website to showcase my skills, experience, and projects. Built with HTML, CSS, Bootstrap, and JavaScript.
+        </p>
+        <div class="mb-3">
+          <span class="badge bg-danger me-2">HTML</span>
+          <span class="badge bg-primary me-2">CSS</span>
+          <span class="badge bg-warning text-dark me-2">JavaScript</span>
+          <span class="badge bg-purple">Bootstrap</span>
+        </div>
+        <div class="mt-3">
+          <a href="https://github.com/vigneshvijayan103/portfolio.git" target="_blank" class="text-white fs-4 me-3">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://vigneshvijayan103.github.io/portfolio/" target="_blank" class="text-white fs-4">
+            <i class="fas fa-external-link-alt"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
