--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ I’m driven by a commitment to continuous growth and delivering real-world impa
     <div class="col-md-6">
       <div class="bg-dark rounded-4 shadow-lg p-4 h-100">
         <div class="text-center mb-3">
-   <img src="/images/nestleaf1.png" 
+   <img src="images/nestleaf1.png" 
      alt="NestLeaf Project" 
      class="img-fluid rounded-3" 
      style="width: 100%; height: 200px; object-fit: cover; object-position: center 30%;" />
@@ -371,4 +371,5 @@ I’m driven by a commitment to continuous growth and delivering real-world impa
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+" crossorigin="anonymous"></script>
 </body>
+
 </html>
