--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ I’m driven by a commitment to continuous growth and delivering real-world impa
     <div class="col-md-6">
       <div class="bg-dark rounded-4 shadow-lg p-4 h-100">
         <div class="text-center mb-3">
-          <img src="/images/profile.png" alt="Portfolio Project" class="img-fluid" style="max-height: 200px;">
+          <img src="images/profile.png" alt="Portfolio Project" class="img-fluid" style="max-height: 200px;">
         </div>
         <h3 class="mb-3">Personal Portfolio</h3>
         <p>
@@ -373,3 +373,4 @@ I’m driven by a commitment to continuous growth and delivering real-world impa
 </body>
 
 </html>
+
